Fix bags: highlighting the buttons of the current page and sorting by date, line wrapping

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -44,3 +44,6 @@ h1 {
 .inputItem:focus::placeholder {
   color: transparent;
 }
+.active {
+  background-color: rgba(207, 188, 183, 0.822);
+}
