--- a/src/Filter.module.css
+++ b/src/Filter.module.css
@@ -16,10 +16,6 @@
   font-size: 15px;
 }
 
-/* .filterButtons button:focus {
-  background-color: rgba(207, 188, 183, 0.822);
-} */
-
 .filterButtons .active {
   background-color: rgba(207, 188, 183, 0.822);
 }
