--- a/src/Item.module.css
+++ b/src/Item.module.css
@@ -1,18 +1,17 @@
 .itemOfList {
   display: flex;
   justify-content: space-between;
-  margin: 0.3em 15%;
+  margin: 0.1em 15%;
   background-color: rgb(233 226 220);
   border: 1px solid rgb(104, 83, 55);
   align-items: center;
   border-radius: 0.3em;
-  max-height: 1.5em;
   font-size: 25px;
 }
 
 .checkbox {
-  width: 2em;
-  height: 2em;
+  width: 1.5em;
+  height: 1.5em;
   flex-shrink: 0;
   flex-grow: 0;
   border-radius: 50%;
@@ -30,17 +29,18 @@
 }
 
 .content p {
-  padding-top: 0.1em;
   display: flex;
   justify-content: space-between;
-  margin-right: 1em;
   align-items: center;
-  width: 80px;
+  min-width: 6em;
+  font-size: 17px;
+  word-break: break-all;
+  margin: 0.5em 0.1em 0;
 }
 
 .itemOfList button {
-  height: 1.8em;
-  width: 1.8em;
+  height: 1.5em;
+  width: 1.5em;
   border: 0;
   outline: none;
   background-color: transparent;
@@ -54,7 +54,7 @@
 }
 
 .date {
-  font-size: 15px;
+  font-size: 12px;
 }
 
 .dateAndDelete {
@@ -66,7 +66,7 @@
   box-shadow: none;
   background-color: rgba(194, 163, 154, 0.329);
   max-width: 5em;
-  font-size: 25px;
+  font-size: 17px;
   border: 1px solid rgb(90, 45, 29);
   border-radius: 0.3em;
   padding-top: 0.1em;
@@ -77,4 +77,5 @@
   width: 80px;
   outline: none;
   font-stretch: expanded;
+  overflow-wrap: break-word;
 }
