--- a/src/Pagination.module.css
+++ b/src/Pagination.module.css
@@ -18,6 +18,6 @@
   border-radius: 0.2em;
 }
 
-.pagination button:focus {
-  background-color: rgba(177, 155, 149, 0.623);
+.pageNumber .active {
+  background-color: rgba(180, 163, 158, 0.822);
 }
